# goalee

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: app_1.py  example.py
examples/anti_goals/: goal_checker.py
examples/area_for_time/: app.py  goal_checker.py
examples/area_goals/: app.py  goal_checker.py
examples/complex_goal/: README.md  goal_checker.py
examples/entity_attr_stream/: app.py  goal_checker.py
examples/entity_for_time/: goal_checker.py
examples/entity_goals/: app.py  goal_checker.py
examples/fatal_goals/: app.py  goal_checker.py
examples/goal_repeater/: goal_checker.py
examples/moving_area_goal/: app.py  goal_checker.py
examples/pose_goals/: app.py  goal_checker.py
examples/test_bug_buffer_keyerr/: MyScenario.py
examples/topic_goals/: goal_checker.py
examples/waypoint_trajectory_goal/: app.py  goal_checker.py
goalee/: __init__.py  area_goals.py  brokers.py  complex_goal.py  definitions.py  entity.py  entity_goals.py  exception.py  goal.py  logging.py  pose_goals.py  repeater.py  rtmonitor.py  scenario.py  target.py  topic_goals.py  trajectory_goals.py  types.py
tests/: __init__.py  test_goalee.py
