[metadata]
name = goalee
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Internal DSL for goal-driven verification of Cyber-Physical apps
url = github.com/robotics-4-all/goalee
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True
package_dir =
    goalee = goalee

install_requires =
	commlib-py>=0.10.6
	pydantic>=2.0.0
	rich>=13.4.2


[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]

[options.entry_points]

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 80
